# Polymaket-Sports-Trading-Bot

./: README.md  alembic.ini  commit_2bd8d83.patch  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/checks/: route.ts
dashboard/src/app/api/fills/: route.ts
dashboard/src/app/api/live-prices/: route.ts
dashboard/src/app/api/risk-events/: route.ts
poly_sports/data_fetching/: fetch_odds_api.py  fetch_odds_comparison.py  fetch_odds_data.py  fetch_sports_markets.py
poly_sports/db/: __init__.py  database.py  history_capture.py  history_repository.py  models.py  repository.py
poly_sports/db/alembic/: env.py
poly_sports/db/alembic/versions/: 393f34e2dcc3_initial.py  b7d0f5c1a2e9_add_historical_capture_tables.py
poly_sports/market_data/: __init__.py  price_feed.py
poly_sports/trading/: config.py  engine.py  position_manager.py
poly_sports/trading/execution/: paper.py
poly_sports/utils/: api_key_pool.py
scripts/: export_replay_dataset.py  migrate_jsonl_to_sqlite.py  run_auto_trader.py
tests/: conftest.py  test_api_key_pool.py  test_event_matching.py  test_fetch_odds_api.py  test_fetch_sports_markets.py  test_history_capture_integration.py  test_migration.py  test_trading_engine_integration.py
tests/db/: test_dashboard_queries.py  test_database.py  test_history_repository.py  test_repository.py
tests/market_data/: test_price_feed.py
tests/smoke/: test_polymarket_api_smoke.py
tests/trading/: test_engine_db_integration.py
(+2 files in other folders)
