[project]
name = "poly-sports"
version = "0.1.0"
description = "A Python package for fetching and analyzing sports market data from Polymarket"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "aiofiles",
    "py-clob-client",
    "requests",
    "python-dotenv",
    "pandas",
    "pytest",
    "pytest-mock",
    "pytest-asyncio>=0.23.0",
    "rapidfuzz",
    "python-dateutil",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poly_sports"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

